Change frontend root to require admin login

--- a/web/web.yaml
+++ b/web/web.yaml
@@ -27,11 +27,13 @@ handlers:
 
     - url: /
       secure: always
-      login: required
+      #login: required
+      login: admin
       static_files: dist/index.html
       upload: dist/index\.html
 
     - url: /
       secure: always
-      login: required
+      #login: required
+      login: admin
       static_dir: dist/
