Add form submit, validation and tests, and fonts
Project creation form validates name and description not empty.
Form can be submitted to backend.
Added first tests with jest and enzyme.
Added different types of Robot font and Material Icons font.

Fixes: #16, fixes: #19, fixes: #22

--- a/web/web.yaml
+++ b/web/web.yaml
@@ -5,6 +5,7 @@ api_version: go1.8
 skip_files:
   - ^(.*/)?.*/node_modules/.*$
   - ^(node_modules/.*)
+  - ^(.*/)?.*/test/.*$
 
   - ^(.*/)?#.*#$
   - ^(.*/)?.*~$
