--- a/web/package.json
+++ b/web/package.json
@@ -3,24 +3,34 @@
   "version": "0.1.0",
   "description": "UEF Projektipankki front-end",
   "main": "index.js",
+  "engines": {
+    "node": ">=9.11.0",
+    "npm": "5.6.0"
+  },
   "scripts": {
     "start": "node_modules/.bin/webpack-dev-server --config ./webpack.config.js --mode development",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "update-test-snapshots": "jest --updateSnapshot"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "material-ui": "^1.0.0-beta.41",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-material-ui-form-validator": "^2.0.0-beta.8"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^2.0.0",
@@ -30,11 +40,19 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^22.4.3",
     "node-sass": "^4.8.3",
+    "react-test-renderer": "^16.3.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|scss|less)$": "identity-obj-proxy"
+    }
   }
 }
