Add frontend routing and initial views for project list and details
React router added to frontend.

Creating new project now redirects to project page. List page
shows list of projects, and contains a links to each project.
Project detail page still needs an error message, and list page all
 details.

Fixes: #27, fixes: #28

--- a/web/package.json
+++ b/web/package.json
@@ -16,10 +16,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "history": "^4.7.2",
     "material-ui": "^1.0.0-beta.41",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-material-ui-form-validator": "^2.0.0-beta.8"
+    "react-material-ui-form-validator": "^2.0.0-beta.8",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
