--- a/web/web.yaml
+++ b/web/web.yaml
@@ -3,8 +3,7 @@ runtime: go
 api_version: go1.8
 
 skip_files:
-  - ^(.*/)?.*/node_modules/.*$
-  - ^(node_modules/.*)
+  - node_modules/
   - ^(.*/)?.*/test/.*$
 
   - ^(.*/)?#.*#$
