--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -16,6 +16,11 @@
     "react/forbid-prop-types": 1,
     "react/prop-types": 1,
     "linebreak-style": 1,
-    "import/extensions": 1
+    "import/extensions": 1,
+    "jsx-a11y/anchor-is-valid": [ "error", {
+      "components": [ "Link" ],
+      "specialLink": [ "to", "hrefLeft", "hrefRight" ],
+      "aspects": [ "noHref", "invalidHref", "preferButton" ]
+    }]
   }
 }
