--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -17,6 +17,7 @@
     "react/prop-types": 1,
     "linebreak-style": 1,
     "import/extensions": 1,
+    "import/no-named-as-default": 1,
     "jsx-a11y/anchor-is-valid": [ "error", {
       "components": [ "Link" ],
       "specialLink": [ "to", "hrefLeft", "hrefRight" ],
