Update metadata file upload dialog and add proptypes to frontend
Relates: #53
Closes: #50

--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "history": "^4.7.2",
     "material-ui": "^1.0.0-beta.41",
+    "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-material-ui-form-validator": "^2.0.0-beta.8",
