Add metadata deleting function, taskqueue and some refactoring
Created endpoint to backend to delete metadata summary and rows. Row
deleting is implemented with datastore taskqueue in batches of 250.

Frontend metadata button has now confirmation dialog.

Frontend is also refactored with more prop types and changing some react
class components to lighter const components.

Closes: #72

--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -10,6 +10,11 @@ handlers:
       login: admin
       script: _go_app
 
+    - url: /api/tasks/.*
+      secure: always
+      login: admin
+      script: _go_app
+
     - url: /api/.*
       secure: always
       login: required
