Add functionality to save users and return users own information
Created initial admin view with user form and endpoint to add users
to app.

Api endpoint /api/users/me returns users own name and role in app.

Relates: #77
Closes: #75, closes: #78

--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -15,6 +15,11 @@ handlers:
       login: admin
       script: _go_app
 
+    - url: /api/users/.*
+      secure: always
+      login: required
+      script: _go_app
+
     - url: /api/.*
       secure: always
       login: required
