Add error logging for file name check and a few skip_files to yaml

--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -3,6 +3,11 @@ api_version: go1.9
 
 skip_files:
   - ^(.*/)?.*\.DS_Store$
+  - ^(.*/)?#.*#$
+  - ^(.*/)?.*~$
+  - ^(.*/)?.*\.py[co]$
+  - ^(.*/)?.*/RCS/.*$
+  - ^(.*/)?\..*$
 
 handlers:
     - url: /api/admin/.*
