Add link to, and user list to admin view and access denied page
Header has link to admin view if user is admin.

Admin view has list of regular users, and button-dialog to add more.
User form needs validation and ability to update user list.

If user, who is not admin or regular user, enters the application,
access denied page is shown.

Relates: #77
Closes: #80, closes: #76, closes: #79

--- a/web/web.yaml
+++ b/web/web.yaml
@@ -4,7 +4,14 @@ api_version: go1.8
 
 skip_files:
   - node_modules/
+  - src/
   - ^(.*/)?.*/test/.*$
+  - .babelrc
+  - .eslintrc
+  - package.json
+  - package-lock.json
+  - README.md
+  - webpack.config.js
 
   - ^(.*/)?#.*#$
   - ^(.*/)?.*~$
@@ -14,17 +21,6 @@ skip_files:
   - ^(.*/)?\..*$
 
 handlers:
-    - url: /admin/
-      secure: always
-      login: admin
-      static_files: dist_admin/index.html
-      upload: dist_admin/index\.html
-
-    - url: /admin
-      secure: always
-      login: admin
-      static_dir: dist_admin
-
     - url: /(.*\..*)
       secure: always
       login: admin
