--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -22,6 +22,7 @@
       "components": [ "Link" ],
       "specialLink": [ "to", "hrefLeft", "hrefRight" ],
       "aspects": [ "noHref", "invalidHref", "preferButton" ]
-    }]
+    }],
+    "no-confusing-arrow": 1
   }
 }
