Add frontend updates
Timestamps changed. Project view and its filelist updated.

Frontend now working also for non-admin users in app.

--- a/web/web.yaml
+++ b/web/web.yaml
@@ -23,17 +23,17 @@ skip_files:
 handlers:
     - url: /(.*\..*)
       secure: always
-      login: admin
+      login: required
       static_files: dist/\1
       upload: dist/(.*\..*)
 
     - url: /.*
       secure: always
-      login: admin
+      login: required
       static_files: dist/index.html
       upload: dist/index\.html
 
     - url: /
       secure: always
-      login: admin
+      login: required
       static_dir: dist/
