--- a/web/package.json
+++ b/web/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "uef-projektipankki",
+  "name": "metavuo",
   "version": "0.1.0",
   "description": "Metavuo front-end",
   "main": "index.js",
   "engines": {
     "node": ">=9.11.0",
     "npm": "5.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/solita/metavuo"
   },
   "scripts": {
     "start": "node_modules/.bin/webpack-dev-server --config ./webpack.config.js --mode development",
@@ -43,7 +47,6 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.4",
     "node-sass": "^4.9.0",
     "react-test-renderer": "^16.4.0",
