Fix multiple frontend bugs and add file type error to metadata upload
Frontend:
- Add max length to form fields.
- Add more error messages
- Project list cuts long name and description with ellipsis and shows
   the whole text in tooltip instead

Add xlsx file error to sample metadata upload.

Relates: #45, #46

--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -20,9 +20,7 @@
     "import/no-named-as-default": 0,
     "jsx-a11y/anchor-is-valid": [ "error", {
       "components": [ "Link" ],
-      "specialLink": [ "to", "hrefLeft", "hrefRight" ],
-      "aspects": [ "noHref", "invalidHref", "preferButton" ]
-    }],
-    "no-confusing-arrow": 1
+      "specialLink": [ "to" ]
+    }]
   }
 }
